# Research_MAS

./: .gitignore  README.md  a2a.md  deployment.md  mcp_architecture.md  memory_architecture.md  patch_agents_provider.py  project_structure.md  pyproject.toml  requirements.txt  run.py
agents/: __init__.py  base.py  citation.py  critic.py  memory_agent.py  planner.py  retrieval.py  supervisor.py  writer.py
api/: main.py  routes.py  schemas.py
configs/: __init__.py  config.py
frontend/: streamlit_app.py
mcp_layer/: __init__.py  client.py  resources.py  server.py  tools.py
memory/: __init__.py  base.py  mongodb_memory.py  pinecone_memory.py  sqlite_memory.py
tests/: conftest.py  test_agents.py  test_api.py  test_mcp.py  test_memory.py  test_workflow.py
utils/: __init__.py  helpers.py  logger.py
workflows/: __init__.py  graph.py  state.py
