[project]
name = "research-mas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0,<1.0.0",
    "dnspython>=2.8.0",
    "duckduckgo-search>=6.2.0,<7.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langgraph>=0.2.0,<0.3.0",
    "mcp>=1.0.0,<2.0.0",
    "motor>=3.3.0,<4.0.0",
    "pinecone-client>=5.0.0,<6.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "pymongo>=4.8.0,<5.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-httpx>=0.30.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.38.0,<2.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]
